# PuzzleSolver

./: .gitignore  CMakeLists.txt  PuzzleSolver.cpp  PuzzleSolver.h  README.md  main.cpp  main_test.cpp  makefile  puzzle_solver_library.cpp
cpp_lib/: .gitignore  CMakeLists.txt  PuzzleSolver.cpp  PuzzleSolver.h  main_test.cpp  puzzle_solver_command.cpp  puzzle_solver_library.cpp  puzzle_solver_library.h
cpp_lib/communication/: communication.cpp  communication.h  communication_image.cpp  communication_image.h  puzzle_solver_dll.cpp  puzzle_solver_dll.h
cpp_lib/extras/: calculate_corruption_rate.cpp  calculate_corruption_rate.h
cpp_lib/pre_processing/: CMakeLists.txt  corner_finding.cpp  corner_finding.h  dataset_processing.cpp  piece_splitting.cpp  piece_splitting.h
cpp_lib/rust_solving/: Cargo.toml  idea.md  rust_solving_lib.h
cpp_lib/rust_solving/src/: constants.rs  finalize_piece_array.rs  lib.rs  main.rs  piece_array.rs  piece_comparing.rs  piece_group.rs  piece_group_holder.rs  piece_sub_components.rs  shore.rs  single_piece.rs  solver.rs
cpp_lib/solving/: calculate_connections.cpp  constants.h  solve.cpp  solve.h  util.cpp  util.h
cpp_lib/solving/graphic_piece/: PieceShape.h  Side.cpp  Side.h
cpp_lib/solving/groped_pieces/: GroupedPieces.h  GroupedPieces.tpp
cpp_lib/solving/logic_piece/: PieceConnection.h  PieceConnections.cpp
cpp_lib/solving/puzzle_preview/: Holder.cpp  Holder.h  PieceArray.cpp  PieceArray.h  PieceArray.tpp  PieceImage.h  PieceImmage.cpp  PreviewManager.cpp  PreviewManager.h
cpp_lib/testing/: CMakeLists.txt  main.cpp  test_json_output.py  tests.cpp  tests.h
cpp_lib/work_path/: status.txt
dataset/: CMakeLists.txt  corner_finding.cpp  corner_finding.h  dataset_processing.cpp  dataset_processing.h  piece_splitting.cpp  piece_splitting.h  util.h
dataset/500pcs_V2/divided/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+460 more)
dataset/blue_500pcs/connections/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+460 more)
dataset/blue_500pcs/divided/: 0.txt  10.txt  101.txt  102.txt  103.txt  104.txt  106.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  117.txt  118.txt  119.txt  120.txt  121.txt  122.txt  123.txt  124.txt  126.txt  127.txt  129.txt  13.txt  130.txt  131.txt  133.txt  135.txt  136.txt  138.txt  139.txt  14.txt  140.txt  141.txt  142.txt  144.txt  (+338 more)
dataset/test_16x16_digital/connections/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+216 more)
dataset/test_16x16_digital/divided/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+209 more)
dataset/test_16x30_digital/connections/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+440 more)
dataset/test_16x30_digital/divided/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+437 more)
dataset/test_2x3/connections/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt
dataset/test_4x4_2/: status.txt
dataset/test_4x4_3/: status.txt
dataset/test_4x4_4/: status.txt
dataset/test_4x4_5/: status.txt
piece_classes/: CMakeLists.txt  Piece.cpp  Piece.h  Side.cpp  Side.h  calculate_connections.cpp  testing.cpp  util.h
piece_classes/full_puzzle_graph/: PieceNode.cpp  PieceNode.h  PuzzleGraph.cpp  PuzzleGraph.h
piece_classes/grafic_piece/: Piece.cpp  PieceShape.cpp  PieceShape.h  Side.cpp  Side.h
piece_classes/graphic_piece/: PieceShape.cpp  PieceShape.h  Side.cpp  Side.h  util_piece.cpp  util_piece.h
piece_classes/groped_pieces/: Direction.cpp  Direction.h  GroupedPieces.cpp  GroupedPieces.h  GroupedPieces.tpp  GroupedPiecesHolder.h  GroupedPiecesHolder.tpp  Shore.cpp  Shore.h  errors.cpp  errors.h  grouped_pieces_errors.h
piece_classes/logic_piece/: PieceConnection.h  PieceConnections.cpp  PieceConnections.h  PieceLogic.cpp  PieceLogic.h  PuzzleGraph.cpp  PuzzleGraph.h  PuzzlePiece.cpp  PuzzlePiece.h
piece_classes/piece/: Piece.cpp  Piece.h  Side.cpp  Side.h
piece_classes/puzzle/: Holder.cpp  Holder.h  OutsideHolder.cpp  OutsideHolder.h  PieceArray.cpp  PieceArray.h  PieceArray.tpp  PieceHolder.cpp  PieceHolder.h  PieceImage.h  PieceImmage.cpp  PreviewHolder.cpp  PreviewHolder.h  Puzzle.cpp  Puzzle.h  ShoringHolder.cpp  ShoringHolder.h  UnknownHolder.cpp  UnknownHolder.h  point_indexes.h  todo.md
piece_classes/puzzle_preview/: PieceArray.tpp  PieceImmage.cpp  PreviewHolder.h  ShoringHolder.cpp
(+3632 files in other folders)
